--- a/src/views/EditorView/SideNavigationBar/LabelInputField/LabelInputField.scss
+++ b/src/views/EditorView/SideNavigationBar/LabelInputField/LabelInputField.scss
@@ -117,6 +117,11 @@
           &:hover {
             background-color: $darkThemeThirdColor;
           }
+
+          .DropdownInput {
+            background-color: #111;
+            pointer-events: none;
+          }
         }
       }
 
